# salegentic-agents

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml  requirements  sales-agent-architecture.mermaid
app/: main.py
app/api/routes/: chat.py
app/api/routes/v1/: router.py
app/clients/hubspot/: auth.py  client.py  client_helpers.py
app/core/: application.py  auth.py  config.py  database.py  init_db.py
app/core/dependencies/: agent_dependencies.py  services.py
app/core/errors/: __init__.py  exceptions.py
app/core/id_generator/: id_generator.py
app/core/middleware/: error_handler.py
app/models/: account.py  agent.py  analytics.py  analytics_agent.py  base.py  deal_data.py  hubspot.py  plan.py  request.py  response.py  user.py  vector.py  workspace.py
app/models/account/: account.py
app/models/integrations/hubspot/: hubspot.py
app/models/user/: user.py
app/repositories/: alembic.ini
app/repositories/account/: account.py
app/repositories/agent/: agent_repository.py
app/repositories/hubspot/: deal_repository.py  hubspot.py
app/repositories/migrations/: env.py
app/repositories/migrations/versions/: 20250302_deal_conversation_tables.py  20250302_vector_db_tables.py  (+3 more)
app/repositories/user/: user.py
app/repositories/vector/: vector_store.py
app/repositories/workspace/: workspace.py
app/repository/: vector_store.py
app/repository/hubspot/: hubspot_repository.py
app/services/account/: account.py  account_service.py
app/services/agent/: agent_service.py  prompts.py
app/services/analytics/: analytics_service.py
app/services/hubspot/: data_sync_service.py  hubspot_service.py
app/services/llm/: llm.py
app/services/users/: users_service.py
app/services/vector/: vector_helpers.py  vector_service.py
app/services/workspace/: workspace_service.py
(+34 files in other folders)
