[tool.poetry]
name = "salesgentic-agents"
version = "0.1.0"
description = ""
authors = ["Vincent10z <vincentsmithray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
aiohttp = "^3.11.12"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
ruff = "^0.9.6"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
