[tool.poetry]
name = "salesgentic-agents"
version = "0.1.0"
description = ""
authors = ["Vincent10z <vincentsmithray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
aiohttp = "^3.11.12"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
greenlet = "^3.1.1"
nanoid = "^2.0.0"
email-validator = "^2.2.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
ruff = "^0.9.6"
mypy = "^1.15.0"
poethepoet = "^0.32.2"

[tool.poe.tasks]
init-py = """
#!/usr/bin/env python
import os

def create_init_files():
    for root, dirs, files in os.walk('.'):
        if '.venv' not in root and '.git' not in root:  # Skip virtual env and git dirs
            if '__init__.py' not in files:
                with open(os.path.join(root, '__init__.py'), 'a'):
                    pass

if __name__ == '__main__':
    create_init_files()
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"